// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Подразумеванa својства се подударају са последњим снимком. 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    aria-valuetext="0%"
    class="ProgressBar"
    role="progressbar"
    tabindex="0"
  >
    <div
      aria-hidden="true"
      class="Progress"
      role="presentation"
      style="width: 0%;"
    />
  </div>
</DocumentFragment>
`;

exports[`Сва подешена својства се подударају са последњим снимком. 1`] = `
<DocumentFragment>
  <div
    aria-busy="false"
    aria-describedby="test-label"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="40"
    aria-valuetext="Loading..."
    class="ProgressBar TestProgressBar"
    data-testid="test-id"
    id="id"
    role="progressbar"
    tabindex="0"
  >
    <div
      aria-hidden="true"
      class="Progress"
      role="presentation"
      style="width: 40%;"
    />
  </div>
</DocumentFragment>
`;
